# abstract_reasoning

./: .gitignore  LICENSE  README.md  TODO.txt  experiment.code-workspace  setup.sh
analysis/: README.md  pyproject.toml
analysis/scripts/: SLURM-run_experiment1_pipeline.sh  analysis_ANNs.py  analysis_compare_clean.py  analysis_compare_humans_ANNs.py  analysis_lab.py  analysis_plotting.py  analysis_rsa.py  bids_convert_validation.py  clean_macos_metadata.py  convert_lab_to_bids.py  corr_cv_res.py  corr_cv_res2.py  demo.ipynb  demo.py  demo_modular.ipynb  experiment1_pipeline.py  experiments.ipynb  experiments_validation.py  finalize_lab_bids.py  fix_openneuro_bids_metadata.py  fixation_analysis.py  fixation_plots_viewer.py  include_bids_extra_data.py  item_ids_sort_for_rdm.csv  participant_similarity_validation.py  validate_lab_bids_conversion.py
analysis/src/abstract_reasoning_analysis/: analysis_config.py  analysis_plotting.py  paths.py  test.py
analysis/src/abstract_reasoning_analysis/bids_converter/: behav_metadata.yml  bids.py  dataset_description.yml  et_metadata.yml
analysis/src/abstract_reasoning_analysis/data_downloader/: __init__.py  download.py
analysis/src/abstract_reasoning_analysis/data_loader/: ann_data.py  combined_data.py  human_data.py
analysis/src/abstract_reasoning_analysis/ml/: __init__.py
analysis/src/abstract_reasoning_analysis/utils/: analysis_utils.py  clean_lab_data.py  custom_type_hints.py
analysis/src/ar_analysis/: analysis_config.py  analysis_plotting.py  analysis_rsa.py
analysis/src/ar_analysis/bids_converter/: bids.py  et_metadata.yml
analysis/src/ar_analysis/data_loader/: ann_data.py  combined_data.py  human_data.py
analysis/src/ar_analysis/data_loader/human/: __init__.py  _common.py  base.py  group.py  session.py  subject.py
analysis/src/ar_analysis/utils/: analysis_utils.py  clean_lab_data.py  data_validation.py
analysis/tests/: test_analysis.py
config/: analysis_config.json  analysis_config.toml  experiment_config.json  experiment_config.toml  layer_hook_config.toml  rules.json
config/sequences/: README.md  modified_items-mapping.csv  session_1.csv  session_2.csv  session_3.csv  session_4.csv  session_5.csv  sessions-1_to_5-masked_idx(7).csv  sessions-1_to_5-masked_idx(mixed)-ascii_symbols-icon_mapping.csv  sessions-1_to_5-masked_idx(mixed)-scrambled-icon_mapping.csv  sessions-1_to_5-masked_idx(mixed)-scrambled.csv  sessions-1_to_5-masked_idx(mixed).csv
cv_fv/: globals.yml  pyproject.toml  pyrightconfig.json
cv_fv/data/: words_de.txt
cv_fv/src/: acc.ipynb
cv_fv/src/utils/: RSA.py  __init__.py  dataset_builder.py  eval_utils.py  globals.py  models.py  query_utils.py
docs/: eyetracker_data_analysis.docx  lab_info.md  lab_procedure.docx  messages.pptx
experiment-ANNs/: Figure_Description_Format-gpt.md  download_models.py  download_models_copy.py  extract_LLM_activations copy.py  extract_LLM_activations.py  load_models.py  online_providers.py  online_query.py  parser.py  pilot_llm_acts.py  pyproject.toml  test_llms.py  test_parser_rich.py  tokenization_utils.py  utils.py
experiment-ANNs/config/: database.db  experiment_config.json  instructions.txt  instructions_chat_gpt.txt  instructions_draft.txt  prompt_formats.json  rules.json  selected_combinations-format[IDs].csv  selected_combinations-format[names].csv  sequences-format[IDs].csv  sequences-format[names].csv  unavailable_models.json
experiment-ANNs/draft/: run_locally.py
experiment-ANNs/nnsight/: run_models.py  tokenization_utils.py
experiment-ANNs/sequence_prompts/: sequence_prompts-masked_idx(mixed)-ascii_symbols.csv  sequence_prompts-masked_idx(mixed)-scrambled.csv  sequence_prompts-masked_idx(mixed).csv
experiment-ANNs/snellius/: download_models.py  download_models.sh  model_rdms.py  pyproject.toml  run_models.py  run_models.sh  sbatch_params.txt  sequence_prompts-masked_idx(7).csv  sequence_prompts.csv  submit_jobs.py  t.py  temp.py  tokenization_utils.py  utils.py
experiment-ANNs/snellius/config/: layer_hook_config.toml  layer_hook_config2.toml  slurm_config.toml
experiment-ANNs/snellius/models_architectures/: Qwen--QwQ-32B-Preview.txt  Qwen--Qwen2.5-72B-Instruct.txt  Qwen--Qwen2.5-7B-Instruct.txt  deepseek-ai--DeepSeek-R1-Distill-Llama-70B.txt  google--gemma-2-2b-it.txt  google--gemma-2-9b-it.txt  meta-llama--Llama-3.2-3B-Instruct.txt  meta-llama--Meta-Llama-3-8B-Instruct.txt
experiment-Lab/: EyeLinkCoreGraphicsPsychoPy.py  README.md  devices.py  experiment.py  experiment_V2.py  experiment_old.py  experimentv2_1.py  images_info.txt  instructions.json  local_utils.py  messages.pptx  procedure.txt  pyproject.toml  rules.txt  setup.py  test.py  testing_eye_tracker.py  utils.py
experiment-Lab/sequences/: items_mapping.json  practice_sequences.csv  session_1.csv  session_2.csv  session_3.csv  session_4.csv  session_5.csv
experiment-Lab/sequencesOLD/: sequences1.csv
experiment-Online/: abstractreasoning-V2.html  abstractreasoning.html  script-V2.js  script.js  style.css
setup/: README.md  database.py  generate_icons.py  pyproject.toml  setup.py
setup-analysis/: README.md  analysis.py  analysis1.py  analysis_ANNs.py  analysis_compare_humans_ANNs.py  analysis_draft.py  analysis_lab.py  analysis_lab_conf.py  analysis_main.py  analysis_plotting.py  analysis_report.py  analysis_utils.py  analyze_ANNs.py  check_data.py  database.py  plotly_figs.py  pyproject.toml  read_eyetracking.py  requirements.txt  rules.py  setup.py  stats_analysis.py  stimuli_images.py  utils.py
setup-analysis/analysis_old/: analysis1.py  analysis1_2.py  analysis1_draft.py  analysis2.py
setup-analysis/sequences/sequences/: items_mapping.json  session_1.csv  session_2.csv  session_3.csv  session_4.csv  session_5.csv
