[tool.poetry]
name = "CP-experiment1-ANNs"
version = "0.1.0"
description = ""
authors = ["chris-pinier <c.pinier@uva.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.26.0"
anthropic = "^0.25.8"
ollama = "^0.1.9"
groq = "^0.5.0"
together = "^1.1.5"
ipykernel = { version = "^6.29.4", optional = true }
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
transformers = "^4.40.2"
ipywidgets = "^8.1.2"
optimum = "^1.19.2"
tiktoken = "^0.7.0"
einops = "^0.8.0"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
notebook_support = ["ipykernel", "iprogress"]
