[project]
name = "experiment-anns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "einops>=0.8.0",
    "groq>=0.13.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.1",
    "openai>=1.58.1",
    "openpyxl>=3.1.5",
    "optimum>=1.23.3",
    "pandas>=2.2.3",
    "python-box>=7.3.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
