[tool.poetry]
name = "CP-experiment1-lab"
version = "0.1.0"
description = ""
authors = ["c.pinier@uva.nl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
psychopy = "2024.1.4"
ipykernel = "6.29.4"
icecream = "^2.1.3"
tqdm = "^4.66.4"
screeninfo = "^0.8.1"

[tool.poetry.group.temp.dependencies]
tabulate = "^0.9.0"
pyperclip = "^1.9.0"
pendulum = "^3.0.0"
loguru = "^0.7.2"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
