[tool.poetry]
name = "experiment1-SetupAnalysis"
version = "0.1.0"
description = ""
authors = ["c.pinier@uva.nl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
mne = "^1.7.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
