[tool.poetry]
name = "CP-experiment1-SetupAnalysis"
version = "0.1.0"
description = ""
authors = ["c.pinier@uva.nl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
mne = "^1.7.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
tqdm = "^4.66.4"
tabulate = "^0.9.0"
mne-icalabel = "^0.6.0"
screeninfo = "^0.8.1"
icecream = "^2.1.3"
pillow = "^10.3.0"
openpyxl = "^3.1.4"
mne-qt-browser = "^0.6.3"
pyqt6 = "^6.7.0"
ipywidgets = "^8.1.3"
nibabel = "^5.2.1"
polars = "^1.8.1"
scikit-learn = "^1.5.2"

[tool.poetry.group.temp.dependencies]
pyperclip = "^1.9.0"
pendulum = "^3.0.0"
loguru = "^0.7.2"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
